# ips/routes/index.js
@@ -1,6 +1,7 @@
 const {Router} = require('express')
 const router = Router()
 const Ip = require('../controllers/ips')
+const TorList = require('../controllers/torList')
 /*TODO: cuando se generen las acciones posta hay que migrarlas a un controller 
         y llamarlas desde aca con un require */
 const logInput = async(req, resp) => {
@@ -28,6 +29,8 @@ const checkModule = (req, resp) => {
 //NOTA: cuando lo vayan a usar este projectId recuerden que viene adentro de req.params como {projectId: value}
 router.post('/project/:projectId/ip-analysis/log/:logId',[], logInput)
 router.get('/project/:projectId/ip-analysis/shodan', Ip.getLocationInfo)
+router.post('/project/:projectId/ip-analysis/torList/refresh', TorList.getTorNodeInfo)
+router.get('/project/:projectId/ip-analysis/tor', TorList.isTorAdress)
 router.get('/checkModule',[], checkModule)
 
 module.exports = router
