# ips/swagger.yaml
@@ -107,3 +107,51 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Ip'
+  /api/project/{projectId}/ip-analysis/tor:
+    get:
+      summary: Analyses ips from logs
+      tags: [IP CRUD]
+      description: Analyses ips from logs  
+      parameters:
+      - name: projectId
+        in: path
+        description: project id
+        required: true
+        schema:
+          type: integer
+      - name: ip
+        in: query
+        description: ip
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: '#/components/schemas/Ip'
+  /api/project/{projectId}/ip-analysis/torList/refresh:
+    post:
+      summary: Refresh tor list 
+      tags: [IP CRUD]
+      description: Refresh tor list 
+      parameters:
+      - name: projectId
+        in: path
+        description: project id
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items:
+                  $ref: '#/components/schemas/Ip'
